<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:ellipsize="none"
            android:fontFamily="sans-serif-thin"
            android:gravity="center_horizontal"
            android:maxLines="10"
            android:scrollHorizontally="false"
            android:text="@string/about"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#33B6EA"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/opensource"
                android:src="@drawable/ic_action_opensource" />

            <TextView
                android:id="@+id/openSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="24dp"
                android:ellipsize="none"
                android:fontFamily="sans-serif-light"
                android:maxLines="10"
                android:scrollHorizontally="false"
                android:text="@string/opensource"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#33B6EA"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/opensource_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:ellipsize="none"
            android:fontFamily="sans-serif-light"
            android:scrollHorizontally="false"
            android:text="@string/opensource_catchphrase"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="100" >

            <ImageView
                android:id="@+id/gitHub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@drawable/selectable_background_cardbank"
                android:clickable="true"
                android:contentDescription="@string/opensource"
                android:onClick="onClick"
                android:padding="4dp"
                android:src="@drawable/ic_github" />

            <ImageView
                android:id="@+id/googlePlay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@drawable/selectable_background_cardbank"
                android:clickable="true"
                android:contentDescription="@string/opensource"
                android:onClick="onClick"
                android:padding="4dp"
                android:src="@drawable/ic_google_play" />
        </LinearLayout>
                <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/interrogationMark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/explaination"
                android:src="@drawable/ic_action_question" />

            <TextView
                android:id="@+id/howThisWorks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="24dp"
                android:ellipsize="none"
                android:fontFamily="sans-serif-light"
                android:maxLines="10"
                android:scrollHorizontally="false"
                android:text="@string/how_it_works"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#33B6EA"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/explaination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:ellipsize="none"
            android:fontFamily="sans-serif-light"
            android:scrollHorizontally="false"
            android:text="@string/explaination"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</ScrollView>